--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://TheDayDreamer17.github.io/Portfolio",
+  "homepage": "https://TheDayDreamer17.github.io/",
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@sarge/avatar-view": "^0.2.13",
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.5.1",
+    "gh-pages": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
