--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thedaydreamer17.github.io/",
+  "homepage": "https://thedaydreamer17.github.io/Portfolio",
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@sarge/avatar-view": "^0.2.13",
